src/test/deca/avecObjet/valid/field_default_init_read_ok copy.deca
// Description :
//    Lecture d'un champ non initialisé explicitement.
//
// Resultats :
//    OK

class A {
    int x;
}

{
    A a = new A();
    println(a.x);
}

