src/test/deca/avecObjet/invalid/return_missing_in_non_void.deca
// Description :
//    Méthode non void sans instruction return.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f() {
        int x = 1;
    }
}

{
}

